# CLoTH-Gossip

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  batch-means.py  cloth_input.txt  edges_ln.csv  edges_template.csv  gen_csv_summary.py  mpp-spec.md  nodes_ln.csv  payments.csv  run-simulation.sh  run_all_simlations.sh  run_all_simulations.sh  run_all_simulations_avgpmtamt.sh  run_all_simulations_broadcastdelay.sh  run_all_simulations_change_feelim.sh  run_all_simulations_change_groupparams.sh  run_all_simulations_change_pmtamt.sh  run_all_simulations_fixthroughput.sh  run_all_simulations_grouplimtrate.sh  run_all_simulations_groupsize.sh  run_all_simulations_mpp_fee_comparison.sh  run_all_simulations_pmtamt.sh  run_all_simulations_txpersec.sh  run_on_server.sh
.run/: CLoTH_Gossip.run.xml
include/: array.h  cloth.h  event.h  gossip.h  hash.h  heap.h  htlc.h  list.h  network.h  payments.h  routing.h  utils.h
result/: channel_update_log.csv  channels_output.csv  cloth_output.json  edges_output.csv  nodes_output.csv  payments_output.csv
scripts/: analyze_network.py  analyze_output.py  analyze_output_and_summarize.py  batch-means.py  compare_fee_mpp_successful.py  gen_csv_summary.py  graph.py  run-simulation.sh  run_all_simulations.sh  run_on_server.sh
src/: array.c  cloth.c  event.c  hash.c  heap.c  htlc.c  list.c  network.c  payments.c  routing.c  utils.c
tests/: run_tests.py  test.md
tests/expected/: test_capacity_exhaust.json  test_capacity_exhaust_cul.json  test_capacity_exhaust_gcb.json  test_gcb_cul_closure.json  test_gcb_group_limit.json  test_mpp_cul_split.json  test_mpp_gcb_3way_split.json  test_mpp_gcb_4way_split.json  test_mpp_gcb_group_limit.json  test_mpp_gcb_many_shards.json  test_mpp_gcb_max_shards_boundary.json  test_mpp_gcb_multipath_split.json  test_mpp_gcb_no_path.json  test_mpp_gcb_rollback.json  test_mpp_gcb_shard_resplit.json  test_mpp_gcb_small_amount.json  test_mpp_gcb_timeout.json  test_mpp_max_shards.json  test_mpp_single_path.json  test_mpp_split_success_cloth.json  test_mpp_split_success_gcb.json  test_no_path.json  test_retry_success.json  test_retry_success_cul.json  test_retry_success_gcb.json  test_retry_success_ideal.json  test_success_single.json  test_success_single_cul.json  test_success_single_gcb.json
tests/networks/diamond_4node/: edges.csv
tests/networks/grouped_network/: channels.csv  edges.csv  nodes.csv
tests/networks/imbalanced_4node/: channels.csv  edges.csv
tests/networks/isolated_node/: channels.csv  edges.csv  nodes.csv
tests/networks/multipath_8node/: channels.csv  edges.csv  nodes.csv
tests/networks/parallel_6node/: channels.csv  edges.csv  nodes.csv
tests/networks/simple_linear/: channels.csv  edges.csv
tests/payments/: test_capacity_exhaust.csv  test_capacity_exhaust_cul.csv  test_gcb_cul_closure.csv  test_gcb_group_limit.csv  test_mpp_gcb_3way_split.csv  test_mpp_gcb_4way_split.csv  test_mpp_gcb_group_limit.csv  test_mpp_gcb_many_shards.csv  test_mpp_gcb_multipath_split.csv  test_mpp_gcb_no_path.csv  test_mpp_gcb_rollback.csv  test_mpp_gcb_shard_resplit.csv  test_mpp_max_shards.csv  test_mpp_partial_failure.csv  test_no_path.csv  test_retry_success.csv  test_retry_success_gcb.csv  test_success_single.csv  test_success_single_cul.csv
